--- a/pom.xml
+++ b/pom.xml
@@ -18,46 +18,12 @@
   		<artifactId>template</artifactId>
   		<version>1.0.0-snapshot</version>
   		<type>jar</type>
-  		<scope>provided</scope>
+  		<scope>compile</scope>
   	</dependency>
   </dependencies>
 	
   <build>
 	  <plugins>
-	  
-	  	<plugin>
-	      	<groupId>org.apache.maven.plugins</groupId>
-	    	<artifactId>maven-jar-plugin</artifactId>
-		    <configuration>
-		        <archive>
-		            <manifest>
-		                <addClasspath>true</addClasspath>
-		                <classpathPrefix>${project.build.directory}/libs/</classpathPrefix>
-		                <mainClass>
-		                    gameoflife.GameOfLife
-		                </mainClass>
-		            </manifest>
-		        </archive>
-		    </configuration>
-		</plugin>
-	    <plugin>
-		    <groupId>org.apache.maven.plugins</groupId>
-		    <artifactId>maven-dependency-plugin</artifactId>
-		    <executions>
-		        <execution>
-		            <id>copy-dependencies</id>
-		            <phase>prepare-package</phase>
-		            <goals>
-		                <goal>copy-dependencies</goal>
-		            </goals>
-		            <configuration>
-		                <outputDirectory>
-		                    ${project.build.directory}/libs
-		                </outputDirectory>
-		            </configuration>
-		        </execution>
-		    </executions>
-		</plugin>
 		<plugin>
 	        <artifactId>maven-assembly-plugin</artifactId>
 	        <version>3.1.1</version>
