--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,12 @@
   <name>gameoflife</name>
   <packaging>jar</packaging>
   
+  <parent>
+    <groupId>prcssng</groupId>
+    <artifactId>build</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+  </parent>
+  
   <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
